[tool.poetry]
name = "tokenfinderbot"
version = "0.1.1"
description = "A simple bot for scanning new ERC-20 token pools created and filtering them based on the time created, liquidity and market cap"
authors = ["Farzadex <farzadex.eth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.7.1"
requests = "^2.30.0"
pytest = "^7.3.1"
dotmap = "^1.3.30"
schedule = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
