[tool.poetry]
name = "tokenfinderbot"
version = "1.0.2"
description = "A simple bot for scanning new ERC-20 token pools created and filtering them based on the time created, liquidity and market cap"
authors = ["Farzad Z <farzadex.eth@gmail.com>"]
readme = "README.md"
repository = "https://github.com/farzadex-eth/tokenfinderbot"
homepage = "https://github.com/farzadex-eth/tokenfinderbot"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.7.1"
requests = "^2.30.0"
pytest = "^7.3.1"
dotmap = "^1.3.30"
schedule = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
